# TestSystem

./: .gitignore  CMakeLists.txt  DataStorage.cpp  DataStorage.h  IWidget.cpp  IWidget.h  MainMenu.cpp  MainMenu.h  README.md  Reactor.cpp  Reactor.h  Solver.cpp  Solver.h  TestSystem.pro  Visualisation.cpp  Visualisation.h  buttonFunctions.cpp  correlator.cpp  dataStorage.cpp  file.xlsx  helper.cpp  interpolator.cpp  main.cpp  reactor.cpp  testui.cpp  testui.h  visualisation.cpp
